--- a/src/Banner.css
+++ b/src/Banner.css
@@ -35,5 +35,16 @@
   background-color: white;
   transition: all 0.3s ease-in-out;
 }
+
+.banner_gradient_bottom {
+  height: 11rem;
+  background: rgb(36, 36, 36);
+  background: linear-gradient(
+    0deg,
+    rgba(36, 36, 36, 1) 2%,
+    rgba(36, 36, 36, 0) 100%,
+    rgba(2, 0, 36, 1) 242424%
+  );
+}
 /* banner button main */
 /* banner button option */
