--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,49 @@
 * {
   margin: 0;
 }
+
+@font-face {
+  font-family: 'BebasNeue-Thin';
+  src: local('BebasNeue'), url(./fonts/BebasNeue-Thin.ttf) format('truetype');
+}
+
+@font-face {
+  font-family: 'BebasNeue-Bold';
+  src: local('BebasNeue'), url(./fonts/BebasNeue-Bold.ttf) format('truetype');
+}
+@font-face {
+  font-family: 'BebasNeue-Regular';
+  src: local('BebasNeue'), url(./fonts/BebasNeue-Regular.ttf) format('truetype');
+}
+
+p {
+  font-family: -apple-system, BebasNeue-Regular;
+}
+b {
+  font-family: -apple-system, BebasNeue-Bold;
+}
+.light {
+  font-family: -apple-system, BebasNeue-Thin;
+}
+body {
+  margin: 0;
+  letter-spacing: 0.25em;
+  font-family: -apple-system, BebasNeue-Regular, 'Segoe UI', 'Roboto', 'Oxygen',
+    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+    sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
+code {
+  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+    monospace;
+}
+
+button {
+  font-family: inherit;
+}
+
 .app {
   background-color: #242424;
   color: white;
