--- a/src/NavBar.css
+++ b/src/NavBar.css
@@ -6,7 +6,7 @@
   position: fixed;
   top: 100;
   padding: 15px;
-  max-width: 1119px;
+  /* max-width: 1119px; */
 }
 .navbar_logo {
   object-fit: contain;
