--- a/src/Banner.css
+++ b/src/Banner.css
@@ -1,6 +1,6 @@
 .banner {
   color: white;
-  object-fit: contain;
+  /* display: flex; */
   height: 448px;
 }
 
@@ -8,8 +8,10 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-
-  /* justify-content: center; */
+  border: 2px solid tomato;
+  height: 100%;
+  width: 100%;
+  justify-content: center;
 }
 
 .banner_title {
@@ -48,15 +50,19 @@
   transition: all 0.3s ease-in-out;
 } */
 
-/* .banner_gradient_bottom {
-  height: 11rem;
-  background: rgb(36, 36, 36);
+.banner_gradient_bottom {
+  border: 2px solid rgb(71, 111, 255);
+  height: 100%;
+  width: 100%;
+  background: #242424;
+  position: relative;
+  top: 0px;
   background: linear-gradient(
     0deg,
     rgba(36, 36, 36, 1) 6%,
     rgba(36, 36, 36, 0) 68%,
     rgba(36, 36, 36, 1) 242424%
   );
-} */
+}
 /* banner button main */
 /* banner button option */
