--- a/src/Col.css
+++ b/src/Col.css
@@ -15,8 +15,8 @@
 }
 /* //mobile */
 .col_movie {
-  width: 220px;
-  height: 145px;
+  /* width: 220px; */
+  /* height: 145px; */
   margin-bottom: 10px;
   width: 30%;
   background-repeat: no-repeat;
@@ -25,8 +25,8 @@
   /* background-size: auto; */
   border-radius: 5px;
   transition: transform 500ms;
-  background-color: #000;
-  max-width: 400px;
+  background-color: rgb(47, 47, 47);
+  max-width: 327px;
   text-align: center;
   color: #ffffff;
 
