--- a/src/App2.css
+++ b/src/App2.css
@@ -52,13 +52,13 @@ button {
   background-color: #102f8a;
   color: white;
   width: 100%;
+
   display: -webkit-box;
   display: -moz-box;
   display: -ms-flexbox;
   display: -moz-flex;
   display: -webkit-flex;
   display: flex;
-  flex-direction: col;
+  flex-direction: row;
   flex-wrap: wrap;
-  justify-content: right;
 }
