--- a/src/NavBar.css
+++ b/src/NavBar.css
@@ -1,11 +1,11 @@
 .navBar {
-  /* width: 100em; */
+  width: 100%;
   display: flex;
   align-items: center;
   justify-content: space-between;
-  position: fixed;
-  top: 100;
-  padding: 15px;
+  position: absolute;
+  top: 0;
+  padding: 1em;
   /* max-width: 1119px; */
 }
 .navbar_logo {
