--- a/src/App2.css
+++ b/src/App2.css
@@ -49,7 +49,7 @@ button {
   color: white;
 }
 .content {
-  background-color: #102f8a;
+  /* background-color: #102f8a; */
   color: white;
   width: 100%;
 
