--- a/src/Col.css
+++ b/src/Col.css
@@ -2,7 +2,7 @@
   /* margin: 20px; */
   color: #ffffff;
   /* color: var(--color2); */
-  background-color: firebrick;
+  /* background-color: firebrick; */
   /* width: 200px; */
   /* min-width: 200px; */
   padding-top: 5em;
