--- a/src/Sidebar.css
+++ b/src/Sidebar.css
@@ -22,5 +22,5 @@ body {
 
 .sidebarItem:hover {
   cursor: pointer;
-  background-color: darkslategray;
+  /* background-color: darkslategray; */
 }
