--- a/src/Banner.css
+++ b/src/Banner.css
@@ -17,3 +17,33 @@
   justify-content: center;
   background-position: center;
 }
+
+.banner_title {
+  font-size: 2.5em;
+  font-weight: bold;
+  padding-bottom: 0.4rem;
+  max-width: fit-content;
+  /* color: #64eebc; */
+}
+
+.banner_button {
+  display: flex;
+}
+
+.banner_button {
+  /* {elegant button} */
+  background-color: #242424;
+  color: white;
+  font-size: 1.2em;
+  padding: 0.5rem 1rem;
+  border: none;
+  cursor: pointer;
+  transition: all 0.3s ease-in-out;
+  margin-top: 0.5rem;
+  margin-bottom: 0.5rem;
+}
+
+.plus {
+  padding-right: 0.5em;
+  height: 0.7em;
+}
