--- a/src/Banner.css
+++ b/src/Banner.css
@@ -11,19 +11,22 @@
   flex-direction: column;
   padding-top: 20%;
   align-items: center;
-  border: 2px solid tomato;
+  /* border: 2px solid tomato; */
   height: 100%;
   width: 100%;
   justify-content: center;
   background-position: center;
+  letter-spacing: 4px;
+  /* line-height: 20px; */
+  padding: auto;
 }
 
 .banner_title {
-  font-size: 2.5em;
+  font-size: 76px;
   font-weight: bold;
   padding-bottom: 0.4rem;
   max-width: fit-content;
-  /* color: #64eebc; */
+  color: var(--colorAccent);
 }
 
 .banner_button {
@@ -41,6 +44,9 @@
   transition: all 0.3s ease-in-out;
   margin-top: 0.5rem;
   margin-bottom: 0.5rem;
+  letter-spacing: 4px;
+  /* //font height: ; */
+  font-size: 20px;
 }
 
 .plus {
