--- a/src/NavBar.css
+++ b/src/NavBar.css
@@ -1,26 +1,28 @@
 .navBar {
-  width: 100%;
+  width: 85.55%;
   display: flex;
+  flex-direction: row;
   align-items: center;
   justify-content: space-between;
-  position: absolute;
+  position: fixed;
   top: 0;
-  padding: 1em;
-  max-width: 87.3%;
-  background-color: turquoise;
-  min-height: 36px;
+  /* padding-top: 12px; */
+  /* max-width: 87.3%; */
+  background-color: rgb(54, 49, 102);
+  /* min-height: 36px; */
 }
 .navbar_logo {
   object-fit: contain;
-  width: 113px;
-  margin-left: 84px;
-  margin-right: 64px;
-  max-width: 98px;
+  /* width: 113px; */
+  padding: 0.5em;
+  /* margin-right: 64px; */
   min-width: 113px;
+  /* min-width: 98px; */
 }
 .hamburger {
   object-fit: contain;
-  width: 27px;
+  min-width: 27px;
+  padding-right: 20px;
 }
 .plusHvyTrans {
   object-fit: contain;
@@ -29,11 +31,13 @@
 }
 .notification {
   object-fit: contain;
-  width: 23.4px;
+  min-width: 23.4px;
+  padding-right: 20px;
+  padding-left: 20px;
 }
 .avatar {
   object-fit: contain;
-  width: 9.6vw;
+  width: 40px;
   max-width: 40px;
   min-width: 36px;
   object-fit: cover;
