banner buttons css

--- a/src/Banner.css
+++ b/src/Banner.css
@@ -30,27 +30,44 @@
   color: var(--colorAccent);
 }
 
-.banner_button {
+.banner_buttons {
   display: flex;
+  flex-direction: row;
+  align-items: center;
+  display: inline-flex;
+  flex-wrap: wrap;
+  gap: 12px;
 }
 
 .banner_button {
-  /* {elegant button} */
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  width: 284px;
+  height: 56px;
   background-color: #242424;
   color: white;
-  font-size: 1.2em;
-  padding: 0.5rem 1rem;
   border: none;
-  cursor: pointer;
-  transition: all 0.3s ease-in-out;
-  margin-top: 0.5rem;
-  margin-bottom: 0.5rem;
-  letter-spacing: 4px;
-  /* //font height: ; */
-  font-size: 20px;
+  font-family: BebasNeue-Thin;
+  font-size: 18px;
+}
+
+.banner_button-secundary {
+  background-color: rgba(36, 36, 36, 0.5);
+  border: 1px solid rgba(255, 255, 255, 0.5);
 }
 
 .plus {
-  padding-right: 0.5em;
-  height: 0.7em;
+  width: 14px;
+  margin-right: 12px;
+  flex-grow: 0;
+  flex-shrink: 0;
+}
+
+.play {
+  width: 9.32px;
+  margin-right: 12px;
+  flex-grow: 0;
+  flex-shrink: 0;
 }
