--- a/src/Banner2.css
+++ b/src/Banner2.css
@@ -39,6 +39,7 @@
   transition: all 0.3s ease-in-out;
   margin-top: 0.5rem;
   margin-bottom: 0.5rem;
+  font-family: BebasNeue-Thin;
 }
 
 .plus {
