--- a/src/App.css
+++ b/src/App.css
@@ -18,6 +18,7 @@ body {
   font-weight: 400;
   font-size: 1rem;
   letter-spacing: 0.25rem;
+  background-color: var(--colorDark);
   /* line-height: 1.125rem; */
 
   /* -webkit-font-smoothing: antialiased;
