--- a/src/Banner.css
+++ b/src/Banner.css
@@ -25,8 +25,6 @@
 .banner_title {
   font-size: 76px;
   font-weight: bold;
-  padding-bottom: 0.4rem;
-  max-width: fit-content;
   color: var(--colorAccent);
 }
 
@@ -51,6 +49,9 @@
   border: none;
   font-family: BebasNeue-Thin;
   font-size: 18px;
+}
+.tagline {
+  /* margin-bottom: 16px; */
 }
 
 .banner_button-secundary {
