--- a/src/Col.css
+++ b/src/Col.css
@@ -1,6 +1,8 @@
 .col {
   /* margin: 20px; */
   color: #ffffff;
+  /* width: 220px; */
+  /* height: 146px; */
   /* color: var(--color2); */
   /* background-color: firebrick; */
   /* width: 200px; */
