--- a/src/Col.css
+++ b/src/Col.css
@@ -1,6 +1,7 @@
 .col {
   /* margin: 20px; */
   color: #ffffff;
+  margin-right: 7.225%;
 
   /* color: var(--color2); */
   /* background-color: firebrick; */
@@ -54,5 +55,6 @@
     position: relative;
     width: 100%;
     padding-top: 1em;
+    margin-right: 0%;
   }
 }
