--- a/src/Col.css
+++ b/src/Col.css
@@ -46,6 +46,10 @@
   left: 50%;
   transform: translate(-50%, 0%);
   margin: 0;
+  /* background-color: tomato; */
+  width: 90%;
+  max-height: 30%;
+  margin-bottom: 14px;
   /* justify-content: center;
   text-align: center; */
 }
