--- a/src/Sidebar.css
+++ b/src/Sidebar.css
@@ -2,7 +2,13 @@
   width: 25rem;
   /* height: 100vh; */
   background-color: rgba(36, 36, 36, 0.9);
+  position: fixed;
+  top: 40px;
+  padding-top: 5em;
+  /* margin-right: 7.225%; */
+  right: 0%;
 }
+
 body {
   margin: 0;
   padding: 0;
