--- a/src/Sidebar.css
+++ b/src/Sidebar.css
@@ -1,5 +1,5 @@
 .sidebar {
-  width: 25rem;
+  width: 751px;
   /* height: 100vh; */
   background-color: rgba(36, 36, 36, 0.9);
   position: fixed;
@@ -7,6 +7,9 @@
   padding-top: 5em;
   /* margin-right: 7.225%; */
   right: 0%;
+  font-size: 22px;
+  padding-left: 88px;
+  height: 100%;
 }
 
 body {
@@ -21,9 +24,9 @@ body {
 }
 
 .sidebarItem {
-  padding: 0.5rem;
+  /* padding: 0.5rem; */
   margin: 0;
-  /* border-bottom: 1px solid #ccc; */
+  margin-bottom: 42px;
 }
 
 .sidebarItem:hover {
