--- a/src/NavBar.css
+++ b/src/NavBar.css
@@ -6,7 +6,7 @@
   justify-content: space-between;
   position: fixed;
   top: 0;
-  background-color: rgb(54, 49, 102);
+  /* background-color: rgb(54, 49, 102); */
 }
 .navbar_right {
   display: flex;
