--- a/src/NavBar.css
+++ b/src/NavBar.css
@@ -6,6 +6,7 @@
   justify-content: space-between;
   position: fixed;
   top: 0;
+  margin-top: 28px;
   /* background-color: rgb(54, 49, 102); */
 }
 .navbar_right {
