--- a/src/Sidebar.css
+++ b/src/Sidebar.css
@@ -33,3 +33,9 @@ body {
   cursor: pointer;
   /* background-color: darkslategray; */
 }
+
+.modal-backdrop {
+  height: 100vh;
+  width: 100vw;
+  background-color: rgba(36, 36, 36, 0.9);
+}
