--- a/src/Sidebar.css
+++ b/src/Sidebar.css
@@ -13,7 +13,7 @@
   /* height: 100vh; */
   background-color: rgba(36, 36, 36, 0.9);
   position: fixed;
-  top: 40px;
+  top: 0;
   padding-top: 5em;
   /* margin-right: 7.225%; */
   right: 0%;
