--- a/src/App.css
+++ b/src/App.css
@@ -3,7 +3,7 @@
   --colorAccent: #64eebc;
   --colorBase: #ffffff;
   --colorDark: #242424;
-  --ff-primary: 'Bebas Neue', sans-serif;
+  --ff-primary: 'Bebas Neue', arial, sans-serif;
 }
 
 *,
