--- a/src/Upload.css
+++ b/src/Upload.css
@@ -1,11 +1,26 @@
+.backdrop {
+  position: fixed;
+  top: 0;
+  left: 0;
+  background-color: rgba(36, 36, 36, 0.8);
+  /* background-color: rgba(36, 12, 220, 0.8); */
+  width: 100vw;
+  height: 1000vh;
+  z-index: -1;
+}
+
 .upload {
+  position: fixed;
+  top: 30vh;
+  padding-top: 5em;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   height: 440px;
   width: 730px;
-  /* background-color: tomato; */
+  background-color: var(--colorDark);
+  z-index: 10;
 }
 .uploaderTitle {
   color: var(--colorAccent);
