--- a/src/Col.css
+++ b/src/Col.css
@@ -54,6 +54,12 @@
   text-align: center; */
 }
 
+.col_header {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+
 @media screen and (max-width: 600px) {
   .col {
     position: relative;
