--- a/src/Col.css
+++ b/src/Col.css
@@ -21,7 +21,6 @@
   background-position: center;
   /* background-size: auto; */
   border-radius: 5px;
-  transition: transform 500ms;
   background-color: rgb(47, 47, 47);
   /* max-width: 327px; */
   /* border: 1px solid rgb(47, 47, 47); */
@@ -64,8 +63,24 @@
   display: none;
   margin-left: 10px;
 }
+.extraInfo {
+  display: none;
+  margin-bottom: auto;
+
+  /* flex-direction: row;
+  align-items: center;
+  justify-content: space-between; */
+}
 
 .col_movie:hover .title-hover {
+  display: flex;
+  margin-bottom: auto;
+  /* flex-direction: row; */
+  /* align-items: center; */
+  /* justify-content: space-between; */
+}
+
+.col_movie:hover .extraInfo {
   display: block;
 }
 .col_movie:hover .titleMovie {
