--- a/src/Banner.css
+++ b/src/Banner.css
@@ -6,6 +6,7 @@
   width: 100%;
   min-height: 70vh;
   height: 100vh;
+  /* border: 4px solid rgb(29, 70, 218); */
 }
 .banner_content {
   display: flex;
