--- a/src/ColOptions.css
+++ b/src/ColOptions.css
@@ -5,6 +5,7 @@
   position: absolute;
   top: 0;
   margin-top: 4.5em;
+  padding-right: 1em;
 
   /* margin-right: 7.225%; */
   right: 0%;
@@ -16,4 +17,8 @@
 }
 li {
   list-style: none;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
 }
