--- a/src/Upload.css
+++ b/src/Upload.css
@@ -5,13 +5,16 @@
   background-color: rgba(36, 36, 36, 0.8);
   /* background-color: rgba(36, 12, 220, 0.8); */
   width: 100vw;
-  height: 1000vh;
+  height: 100vh;
   z-index: -1;
 }
 
 .upload {
-  position: fixed;
-  top: 30vh;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  margin-top: -220px;
+  margin-left: -365px;
   padding-top: 5em;
   display: flex;
   flex-direction: column;
