--- a/src/Banner.css
+++ b/src/Banner.css
@@ -6,7 +6,6 @@
   width: 100%;
   min-height: 70vh;
   height: 100vh;
-  /* border: 4px solid rgb(29, 70, 218); */
 }
 .banner_content {
   display: flex;
@@ -16,13 +15,15 @@
   margin-left: auto;
   /* border: 2px solid tomato; */
   height: 100%;
-  width: 100%;
+  width: calc(100% - 300px);
   justify-content: center;
   background-position: center;
   letter-spacing: 4px;
   /* line-height: 20px; */
   padding: auto;
+  border: 4px solid rgb(29, 70, 218);
   /* background-color: tomato; */
+  margin-right: 317px;
 }
 
 .banner_title {
@@ -82,6 +83,7 @@
     text-align: center;
   }
   .banner_content {
+    width: 100%;
     justify-content: center;
     align-items: center;
     justify-content: center;
