--- a/src/Banner.css
+++ b/src/Banner.css
@@ -21,7 +21,7 @@
   letter-spacing: 4px;
   /* line-height: 20px; */
   padding: auto;
-  border: 4px solid rgb(29, 70, 218);
+  /* border: 4px solid rgb(29, 70, 218); */
   /* background-color: tomato; */
   margin-right: 317px;
 }
