--- a/src/ColOptions.css
+++ b/src/ColOptions.css
@@ -22,3 +22,13 @@ li {
   align-items: center;
   justify-content: space-between;
 }
+
+@media screen and (max-width: 600px) {
+  .colOptions {
+    position: fixed;
+    left: 0px;
+    width: 100vw;
+    bottom: 0px;
+    top: auto;
+  }
+}
