--- a/src/App.css
+++ b/src/App.css
@@ -13,6 +13,11 @@
   box-sizing: border-box;
 }
 
+* {
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
 body {
   font-family: var(--ff-primary);
   font-weight: 400;
