--- a/src/Sidebar.css
+++ b/src/Sidebar.css
@@ -9,7 +9,7 @@
 }
 
 .sidebar {
-  width: clamp(22px, 750px, 750px);
+  width: clamp(50vw, 750px, 750px);
   /* height: 100vh; */
   background-color: rgba(36, 36, 36, 0.9);
   position: fixed;
@@ -49,4 +49,10 @@ body {
   top: 43.09px;
   /* right: 24.8px; */
   z-index: 2000;
+}
+
+@media screen and (max-width: 728px) {
+  .sidebar {
+    width: 100vw;
+  }
 }
