--- a/src/Upload.css
+++ b/src/Upload.css
@@ -57,7 +57,7 @@
   background-color: #919191;
   color: var(--colorDark);
   border: none;
-  font-family: BebasNeue-Thin;
+  font-family: BebasNeue;
   font-size: 18px;
 }
 
