--- a/src/App.css
+++ b/src/App.css
@@ -22,6 +22,7 @@
 
 body {
   font-family: var(--ff-primary);
+  letter-spacing: 4px;
   font-weight: 400;
   font-size: 1rem;
   letter-spacing: 0.25rem;
