--- a/src/fonts.css
+++ b/src/fonts.css
@@ -5,11 +5,19 @@
   font-weight: 200;
 }
 
-@font-face {
+/* @font-face {
   font-family: 'BebasNeue';
   src: local('BebasNeue'), url(./fonts/BebasNeue.woff) format('woff'),
     url(./fonts/BebasNeue.woff2) format('woff2'),
     url(./fonts/BebasNeue-Regular.otf) format('truetype');
-  font-style: normal;
+  font-style: bold;
+  font-weight: 700;
+} */
+
+@font-face {
+  font-family: 'BebasNeue';
+  src: local('BebasNeue'), url(./fonts/BebasNeue-Bold.otf) format('truetype'),
+    url(./fonts/BebasNeue-Bold.ttf) format('truetype');
+  font-style: bold;
   font-weight: 700;
 }
