--- a/src/NavBar.css
+++ b/src/NavBar.css
@@ -8,12 +8,14 @@
   top: 0;
   margin-top: 28px;
   z-index: 20;
+  pointer-events: none;
   /* background-color: rgb(54, 49, 102); */
 }
 .navbar_right {
   display: flex;
   flex-direction: row;
   align-items: center;
+  pointer-events: auto;
   /* justify-content: space-between; */
 }
 
@@ -21,6 +23,7 @@
   display: flex;
   flex-direction: row;
   align-items: center;
+  pointer-events: auto;
   /* justify-content: space-between; */
 }
 
