--- a/src/Col.css
+++ b/src/Col.css
@@ -104,3 +104,42 @@
     margin-right: 2%;
   }
 }
+
+/* ///// */
+
+.movie {
+  width: 500px;
+  height: 200px;
+  background-color: chocolate;
+  margin: 10px;
+}
+.playAndTitle {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.ratingAndYear {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  display: none;
+}
+.title {
+  width: 100px;
+}
+.play {
+  width: 100px;
+}
+
+.playAndTitle:hover {
+  flex-direction: row;
+  justify-content: center;
+}
+
+.movie:hover .playAndTitle {
+  flex-direction: row;
+  justify-content: center;
+}
+.movie:hover .ratingAndYear {
+  display: flex;
+}
