--- a/src/NavBar.css
+++ b/src/NavBar.css
@@ -48,7 +48,7 @@
   flex-direction: row;
   align-items: center;
   margin-left: 64px;
-  font-weight: 200;
+  font-weight: bold;
 }
 .plusHvyTrans {
   width: 14px;
