--- a/src/Col.css
+++ b/src/Col.css
@@ -110,24 +110,33 @@
 .movie {
   width: 500px;
   height: 200px;
-  background-color: chocolate;
+  border-radius: 5px;
+  background-color: rgb(47, 47, 47);
+  padding: 6% 6% 6% 6%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
   margin: 10px;
 }
 .playAndTitle {
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: center;
+  text-align: center;
+  /* width: 88%; */
 }
 .ratingAndYear {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
   display: none;
+  /* width: 88%; */
 }
 .title {
-  width: 100px;
+  /* width: 100%; */
 }
-.play {
+.playButton {
   width: 100px;
 }
 
