--- a/src/Banner.css
+++ b/src/Banner.css
@@ -6,6 +6,8 @@
   width: 100%;
   height: 100vh;
   min-height: 562px;
+  display: flex;
+  margin-bottom: auto;
 }
 .banner_content {
   display: flex;
@@ -21,7 +23,7 @@
   letter-spacing: 4px;
   /* line-height: 20px; */
   padding: auto;
-  /* border: 4px solid rgb(29, 70, 218); */
+  border: 4px solid rgb(29, 70, 218);
   /* background-color: tomato; */
   margin-right: 317px;
 }
@@ -58,7 +60,7 @@
   letter-spacing: 4px;
 }
 .tagline {
-  /* margin-bottom: 16px; */
+  font-size: 24px;
 }
 
 .banner_button-secundary {
@@ -82,15 +84,14 @@
 
 @media screen and (max-width: 600px) {
   .banner_title {
-    margin-top: 268px;
+    /* margin-top: 268px; */
     text-align: center;
   }
   .banner_content {
     width: 100%;
-    justify-content: center;
     align-items: center;
     justify-content: center;
-    padding-top: 0%;
+    /* padding-top: 0%; */
   }
   .banner_buttons {
     flex-direction: column;
