--- a/src/Banner.css
+++ b/src/Banner.css
@@ -23,13 +23,15 @@
   letter-spacing: 4px;
   /* line-height: 20px; */
   padding: auto;
-  border: 4px solid rgb(29, 70, 218);
+  /* border: 4px solid rgb(29, 70, 218); */
   /* background-color: tomato; */
   margin-right: 317px;
 }
 
 .banner_title {
-  font-size: 120px;
+  font-size: clamp(76px, 9vw, 120px);
+  /* font-size: 120px; */
+
   font-family: BebasNeue;
   font-style: bold;
   font-weight: bold;
@@ -86,6 +88,7 @@
   .banner_title {
     /* margin-top: 268px; */
     text-align: center;
+    font-size: 76px;
   }
   .banner_content {
     width: 100%;
