--- a/src/ColOptions.css
+++ b/src/ColOptions.css
@@ -1,15 +1,16 @@
 .colOptions {
   width: 241px;
   /* height: 100vh; */
+  font-size: 16px;
   background-color: rgba(36, 36, 36, 0.9);
   position: absolute;
   top: 0;
   margin-top: 4.5em;
   padding-right: 1em;
+  /* padding: 24px 24px 24px 24px; */
 
   /* margin-right: 7.225%; */
   right: 0%;
-  font-size: 22px;
   /* padding-left: 88px; */
   /* height: 100%; */
   list-style: none;
@@ -21,6 +22,7 @@ li {
   flex-direction: row;
   align-items: center;
   justify-content: space-between;
+  margin-bottom: 16px;
 }
 
 @media screen and (max-width: 600px) {
