--- a/src/Sidebar.css
+++ b/src/Sidebar.css
@@ -35,6 +35,9 @@ body {
 
 .sidebarItem {
   /* padding: 0.5rem; */
+  display: flex;
+  flex-direction: row;
+  align-items: center;
   margin: 0;
   margin-bottom: 42px;
 }
