--- a/src/NavBar.css
+++ b/src/NavBar.css
@@ -7,9 +7,23 @@
   position: fixed;
   top: 0;
   margin-top: 28px;
-  z-index: 20;
+  z-index: 5;
   pointer-events: none;
-  /* background-color: rgb(54, 49, 102); */
+  /* background-color: rgba(0, 0, 0, 0.5); */
+}
+
+.navBarOver {
+  width: 85.55%;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+  position: fixed;
+  top: 0;
+  margin-top: 28px;
+  z-index: 115;
+  pointer-events: none;
+  /* background-color: rgba(0, 0, 0, 0.5); */
 }
 .navbar_right {
   display: flex;
