--- a/src/Upload.css
+++ b/src/Upload.css
@@ -15,7 +15,7 @@
   left: 50%;
   margin-top: -220px;
   margin-left: -365px;
-  padding-top: 5em;
+  padding-top: 48px;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -28,7 +28,7 @@
 .uploaderTitle {
   color: var(--colorAccent);
   font-size: 20px;
-  margin-bottom: 68px;
+  margin-bottom: 48px;
 }
 .dropHere {
   display: flex;
@@ -79,6 +79,13 @@
 .minimal-input:-ms-input-placeholder {
   color: #ffffff;
 }
+
+input[type='text'] {
+  font-size: 16px;
+  font-family: BebasNeue, sans-serif;
+  margin-top: 62px;
+}
+
 .minimal-input {
   border: 0;
   border-bottom: 1px solid #ffffff;
