--- a/src/ColOptions.css
+++ b/src/ColOptions.css
@@ -5,12 +5,12 @@
   background-color: rgba(36, 36, 36, 0.9);
   position: absolute;
   top: 0;
-  margin-top: 4.5em;
+  margin-top: 109px;
   padding-right: 1em;
   /* padding: 24px 24px 24px 24px; */
 
   /* margin-right: 7.225%; */
-  right: 0%;
+  right: -10px;
   /* padding-left: 88px; */
   /* height: 100%; */
   list-style: none;
