--- a/src/Col.css
+++ b/src/Col.css
@@ -137,6 +137,7 @@
   align-items: center;
   justify-content: center;
   text-align: center;
+  height: 100%;
 
   /* margin-bottom: auto; */
   /* background-color: burlywood; */
@@ -147,9 +148,11 @@
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  display: none;
+  opacity: 0;
   font-size: 12px;
   transition: all 0.3s ease;
+  height: 10%;
+
   /* background-color: crimson; */
   /* position: fixed; */
 
@@ -180,13 +183,10 @@
   flex-direction: row;
   justify-content: center;
   align-items: center;
-  height: 80%;
+  height: 100%;
 }
 .movie:hover .ratingAndYear {
-  display: flex;
-  position: relative;
-  bottom: 0%;
-  height: 10%;
+  opacity: 1;
 }
 
 @media screen and (max-width: 600px) {
