--- a/src/Col.css
+++ b/src/Col.css
@@ -188,7 +188,7 @@
   margin-left: 6px;
 }
 .movie:hover .playAndTitle {
-  /* background-color: burlywood; */
+  /* background-color: rgba(36, 36, 36, 0.7); */
   flex-direction: row;
   justify-content: center;
   align-items: center;
