--- a/src/Col.css
+++ b/src/Col.css
@@ -205,7 +205,7 @@
     padding-top: 1em;
   }
   .movie {
-    /* height: 146px; */
+    width: auto;
     min-height: 146px;
     height: 38.9333vw;
   }
