--- a/src/ColOptions.css
+++ b/src/ColOptions.css
@@ -2,7 +2,7 @@
   width: 241px;
   /* height: 100vh; */
   font-size: 16px;
-  background-color: rgba(36, 36, 36, 0.9);
+  background-color: rgb(24, 24, 24);
   position: absolute;
   top: 0;
   margin-top: 109px;
