--- a/src/Col.css
+++ b/src/Col.css
@@ -128,7 +128,7 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  margin: 10px;
+  /* margin: 10px; */
 }
 
 .playAndTitle {
