--- a/src/Sidebar.css
+++ b/src/Sidebar.css
@@ -17,7 +17,8 @@ li {
   background-color: rgba(36, 36, 36, 0.9);
   position: fixed;
   top: 0;
-  padding-top: 157px;
+  padding-top: clamp(5px, 16.845vh, 157px);
+  /* padding-bottom: clamp(5px, 16.845vh, 157px); */
   /* margin-right: 7.225%; */
   right: 0%;
   font-size: 22px;
@@ -46,7 +47,7 @@ body {
   flex-direction: row;
   align-items: center;
   margin: 0;
-  margin-bottom: 42px;
+  height: clamp(5px, 6.652vh, 62px);
   justify-content: left;
   padding-right: 6px;
 }
@@ -58,8 +59,9 @@ body {
 
 .sidebarItemIcon {
   margin-right: 16px;
-  padding-top: 72px;
-  padding-bottom: 72px;
+  padding-top: clamp(5px, 7.725vh, 72px);
+  padding-bottom: clamp(5px, 7.725vh, 72px);
+  height: clamp(5px, 13.519vh, 126px);
 }
 
 .sidebarClose {
