--- a/src/NavBar.css
+++ b/src/NavBar.css
@@ -77,6 +77,19 @@
   width: 113px;
 }
 
+.gradient {
+  position: fixed;
+  top: 0;
+  right: 0;
+  width: 100%;
+  height: 300px;
+  background-image: linear-gradient(
+    0deg,
+    rgba(0, 0, 0, 0) 70%,
+    rgb(0, 0, 0) 105.69%
+  );
+}
+
 @media screen and (max-width: 600px) {
   /* flip horizonally */
   .hamburger {
