--- a/src/App.css
+++ b/src/App.css
@@ -27,6 +27,7 @@ body {
   font-size: 1rem;
   letter-spacing: 0.25rem;
   background-color: var(--colorDark);
+  overflow: hidden;
 
   /* line-height: 1.125rem; */
 }
