--- a/src/Upload.css
+++ b/src/Upload.css
@@ -21,7 +21,7 @@
   justify-content: center;
   align-items: center;
   height: 440px;
-  width: 730px;
+  width: clamp(440px, auto, 440px);
   background-color: var(--colorDark);
   z-index: 1;
 }
